--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,6 +1,3 @@
-* {
-  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
-}
 :root {
   --background-items: rgb(61, 28, 22);
   --background: rgb(211, 208, 205);
@@ -14,16 +11,19 @@
 a {
   text-decoration: none;
 }
+
 .body {
   width: 100%;
   display: flex;
   justify-content: center;
 }
+
 .container {
   width: 100%;
   overflow-x: hidden;
   overflow-y: hidden;
 }
+
 .bac {
   position: fixed;
   width: 100%;
@@ -43,10 +43,12 @@ a {
   margin-top: 10px;
   width: 100%;
 }
+
 .search-box {
   background-color: inherit;
   position: relative;
 }
+
 #input {
   margin: 0 15px;
   width: 200px;
@@ -58,6 +60,7 @@ a {
   color: var(--color-black);
   background-color: var(--color-orange);
 }
+
 #input:focus {
   background-color: var(--color-orange-light);
   outline: none;
@@ -75,14 +78,10 @@ a {
   font-size: 14px;
   background-color: var(--color-orange);
 }
-#ShowSearchMoviesOff {
-  display: none;
-  transition: all .8s ease-in-out;
-}
-#ShowSearchMoviesOn {
-  width: 210px;
-  height: 240px;
-  margin-top: 5px;
+
+#SearchMovies {
+  height: 0px;
+  width: 0px;
   margin-left: 10px;
   overflow: hidden;
   overflow-x: hidden;
@@ -92,66 +91,67 @@ a {
   border-bottom-right-radius: 20px;
   z-index: 100;
   background-color: var(--background-Header);
-  opacity: .9;
-  transition: width .8s ease-in-out;
+  opacity: 0.9;
+  transition: all 0.8s ease-in-out;
+  position: absolute;
 }
 
-#ShowSearchMoviesOn::-webkit-scrollbar {
-  width: 10px;
+#SearchMovies .down {
+  position: absolute;
+  z-index: 100;
+  width: 210px;
+  bottom: 0px;
 }
-#ShowSearchMoviesOn::-webkit-scrollbar-track {
-  margin: 15px;
-  border-radius: 10px;
-  padding: 10px 0;
-}
-#ShowSearchMoviesOn::-webkit-scrollbar-thumb {
-  border-radius: 50px;
-  background: var(--color-white);
-}
-#ShowSearchMoviesOn::-webkit-scrollbar-thumb:hover {
-  background: var(--color-orange-light);
+#SearchMovies .up {
+  position: absolute;
+  z-index: 100;
+  width: 210px;
 }
 
-#ShowSearchMoviesOn a {
+#SearchMovies a {
   display: grid;
+  transition: all 0.8s ease-in-out;
 }
-#ShowSearchMoviesOn .items {
+#SearchMovies .items {
   display: flex;
   align-items: center;
-  margin: 10px 10px;
+  margin: 0px 10px;
   border-radius: 10px;
+  margin-top: 25px;
   overflow: hidden;
-}
-#ShowSearchMoviesOn .items:hover {
-  background-color: var(--color-orange-light);
+  transition: all 0.8s ease-in-out;
+  
 }
 
-#ShowSearchMoviesOn .items .names {
+#SearchMovies .items .names{
   margin: 0 5px;
   font-size: 20px;
   color: var(--color-orange);
+  
 }
 
-#ShowSearchMoviesOn .items img {
+#SearchMovies .items img {
   width: 50px;
   height: 60px;
   border-radius: 10px;
   object-fit: cover;
 }
-#ShowSearchMoviesOn .items-active{
+#SearchMovies .items-active {
   display: flex;
   align-items: center;
-  margin: 10px 10px;
+  margin: 0px 10px;
   border-radius: 10px;
+  margin-top: 25px;
   overflow: hidden;
   background-color: var(--color-orange-light);
+  transition: all 0.8s ease-in-out;
 }
-#ShowSearchMoviesOn .items-active .names {
+#SearchMovies .items-active .names {
   margin: 0 5px;
   font-size: 20px;
   color: var(--color-white);
 }
-#ShowSearchMoviesOn .items-active img {
+#SearchMovies .items-active img {
   width: 50px;
   height: 60px;
   border-radius: 10px;
@@ -338,10 +338,10 @@ a {
   display: grid;
   grid-template-columns: auto auto;
 }
-.movieShow .information .col1{
+.movieShow .information .col1 {
   width: 250px;
 }
-.movieShow .information .col2{
+.movieShow .information .col2 {
   width: 250px;
 }
 .movieShow .information .col1 .item-lan-rat {
@@ -362,14 +362,14 @@ a {
 }
 .movieShow .information .col1 .genres-summary .item {
   padding: 10px 0;
-  width: 240PX;
+  width: 240px;
   position: relative;
-  background-color:var(--color-black);
-  opacity: .9;
+  background-color: var(--color-black);
+  opacity: 0.9;
   margin: 5px 0;
   padding: 10px;
   border-radius: 10px;
-box-shadow: 0px 0 10px 10px;
+  box-shadow: 0px 0 10px 10px;
 }
 
 .movieShow .information .col1 .genres-summary .item .title {
@@ -377,14 +377,12 @@ box-shadow: 0px 0 10px 10px;
   font-size: 20px;
   font-family: monospace;
   font-weight: 900;
-  
 }
 .movieShow .information .col1 .genres-summary .item .line {
   border: 2px solid var(--color-orange-light);
   border-radius: 20px;
   width: 80%;
   margin: 5px 0;
-  
 }
 .movieShow .information .col1 .genres-summary .item .text {
   color: rgb(255, 255, 255);
@@ -411,7 +409,7 @@ box-shadow: 0px 0 10px 10px;
 }
 
 /* Movie show */
-.body-movie{
+.body-movie {
   display: flex;
   width: 100%;
   justify-content: center;
@@ -459,7 +457,6 @@ box-shadow: 0px 0 10px 10px;
   height: 400px;
 }
 
-
 #movie .main .column2 .col1 .summary {
   background-color: inherit;
   font-size: 20px;
@@ -487,11 +484,11 @@ box-shadow: 0px 0 10px 10px;
   background-color: inherit;
   font-size: 20px;
   color: var(--color-white);
-font-family: monospace;
+  font-family: monospace;
 }
 
 #movie .main .column2 .links {
-  display: grid;  
+  display: grid;
 }
 #movie .main .column2 .link {
   margin: 5px 0px;
@@ -575,7 +572,8 @@ font-family: monospace;
   border-radius: 50%;
   margin: 0px 10px;
 }
-.active ,.numbers:hover {
+.active,
+.numbers:hover {
   background-color: inherit;
   cursor: pointer;
   padding: 0 6px;
